--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,14 @@
-/*# sourceMappingURL=style.css.map */
+.timeline {
+  border-left: 2px dotted #e9ecef;
+  margin-left: 200px;
+}
+.timeline .timeline-box {
+  padding-left: 20px;
+  margin-bottom: 30px;
+  position: relative;
+}
+.timeline .timeline-box .timeline-icon {
+  left: -21px;
+  top: 6px;
+  position: absolute;
+}/*# sourceMappingURL=style.css.map */
